workshop03/myappv1-deployment.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myappv1-deploy
  labels:
    name: myapp
    version: v1

spec:
  replicas: 1
  selector:
    matchLabels:
      name: myapp-pod-v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: myapp-pod
      labels:
        name: myapp-pod-v1
    spec:
      containers:
        - name: northwind-container
          image: stackupiss/northwind-app:v1
          imagePullPolicy: Always
          ports:
            - name: myapp-port
              containerPort: 3000
          # livenessProbe:
          #   periodSeconds: 60
          #   httpGet:
          #     port: myapp-port
          #     path: /health
          #   failureThreshold: 3
          #   successThreshold: 1
          #   timeoutSeconds: 15
          # readinessProbe:
          #   periodSeconds: 60
          #   httpGet:
          #     port: myapp-port
          #     path: /ready
          #   failureThreshold: 3
          #   successThreshold: 1
          #   timeoutSeconds: 15
          # resources:
          #   limits:
          #     cpu: "1"
          #     memory: "200Mi"
          #   requests:
          #     cpu: "0.5"
          #     memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-svcv1
  labels:
    name: myapp-svcv1
spec:
  selector:
    name: myapp-pod-v1
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
