workshop03/mydb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mydb-db-deploy
   labels:
      name: northwind-db
      tier: data

spec:
   replicas: 1
   selector:
      matchLabels:
         name: northwind-db-pod
   template:
      metadata:
         name: northwind-db-pod
         labels:
            name: northwind-db-pod
      spec:
        containers:
        - name: northwind-db-container
          image: stackupiss/northwind-db:v1
          imagePullPolicy: Always
          ports:
           - name: mysql-port
             containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
spec:
  selector:
    app: mydb
  type: ClusterIP
  ports:
  - name: dbport
    port: 3306
    targetPort: 3306
