workshop03/mydb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb-svc
spec:
  selector:
    app: mydb
  type: ClusterIP
  ports:
  - name: dbport
    port: 3306
    targetPort: 3306
